@@ -76,8 +76,18 @@ constants in the \helpref{artprov}{sampleartprovider} sample):
 \end{itemize}
 
 Additionally, any string recognized by custom art providers registered using
-\helpref{PushProvider}{wxartproviderpushprovider} may be used. When running
-under GTK+ 2, GTK+ stock item IDs (e.g. {\tt "gtk-cdrom"}) may be used as well.
+\helpref{PushProvider}{wxartproviderpushprovider} may be used.
+
+\wxheading{GTK+ Note}
+
+When running under GTK+ 2, GTK+ stock item IDs (e.g. {\tt "gtk-cdrom"}) may
+be used as well. Additionally, if wxGTK was compiled against GTK+ >= 2.4, then
+it is also possible to load icons from current icon theme by specifying their
+name (without extension and directory components). Icon themes recognized
+by GTK+ follow the
+\urlref{freedesktop.org Icon Themes specification}{http://freedesktop.org/Standards/icon-theme-spec}. Note that themes are not guaranteed to contain all
+icons, so wxArtProvider may return {\tt wxNullBitmap} or {\tt wxNullIcon}.
+Default theme is typically installed in {\tt /usr/share/icons/hicolor}.
 
 \membersection{Clients}
 
